fix bug 628647, crash in nsImapMailFolder::AddMoveResultPseudoKey, r=neil